# hist_purge

./: README.md  config.toml  hist_purge.py  hist_purge.toml  history_clean.py  pyproject-template.toml  pyproject.toml  requirements.txt
src/: hist_purge.py  hist_purge.toml
